--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,8 +1,8 @@
 <resources>
+    <!-- StoryBuilderMain -->
     <string name="app_name">StoryBuilder</string>
     <string name="action_settings">Settings</string>
-    <string name="firstrun_welcome">Welcome to StoryBuilder</string>
-    <string name="instructions">To begin click on the + button</string>
+    <string name="empty">Nothing here yet. Once you save a story, it will appear here.</string>
     <string name="title_activity_create_story">Create a New Story</string>
 
     <!-- For ShowStory -->
@@ -16,8 +16,6 @@
     <string name="tab_plotline">Plotline</string>
     <string name="tab_places">Places</string>
 
-    <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="title_activity_tab_viewer">TabViewer</string>
     <string name="title_activity_sqldatabase">SQLdatabase</string>
 
