--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,8 @@
 <resources>
     <!-- StoryBuilderMain -->
     <string name="app_name">StoryBuilder</string>
-    <string name="action_settings">Settings</string>
+    <string name="about">About</string>
+    <string name="about_activity">About StoryBuilder</string>
     <string name="empty">Nothing here yet.</string>
     <string name="title_activity_create_story">Create a New Story</string>
 
